# AI-report-generator

./: .gitignore  README.md  pyproject.toml  report_template.html  requirements.txt  start.bat  start.sh
luogu_report_generator/: __init__.py  __main__.py  behavior_analyzer.py  bundle_loader.py  cli.py  code_analyzer.py  evaluator.py  submission_evolution.py  syllabus_matcher.py  web.py
tools/: README.md  socks2http.py
